New cleaner image

--- a/2.html
+++ b/2.html
@@ -54,7 +54,7 @@
       <section id="left-sidebar">
         
         <div class="logo">
-          <a href="#intro" class="link-scroll"><img src="assets/images/logo/gilesranch.png" alt="Giles Ranch"></a>
+          <a href="#intro" class="link-scroll"><img src="assets/images/logo/GilesRanchLogo-Cleaner.png" alt="Giles Ranch"></a>
         </div><!-- .logo -->
 
         <!-- Menu Icon for smaller viewports -->
@@ -73,7 +73,7 @@
 
       <section id="main-content" class="clearfix">
         
-        <article id="intro" class="section-wrapper clearfix" data-custom-background-img="assets/images/home2.jpg">
+        <article id="intro" class="section-wrapper clearfix" data-custom-background-img="assets/images/home.jpg">
           <div class="content-wrapper clearfix wow fadeInDown" data-wow-delay="0.3s">
             <div class="col-sm-10 col-md-9 pull-right">
 
@@ -87,13 +87,13 @@
           </div><!-- .content-wrapper -->
         </article><!-- .section-wrapper -->
 
-        <article id="text" class="section-wrapper clearfix" data-custom-background-img="assets/images/other_images/bg1.jpg">
+        <article id="text" class="section-wrapper clearfix" data-custom-background-img="assets/images/river.jpg">
           <div class="content-wrapper clearfix">
-            <div class="col-sm-10 col-md-9 pull-right">
+            <div class="col-sm-10 col-md-9 pull-right darken box">
 
                 <h1 class="section-title">About Us</h1>
 
-                <p class="feature-paragraph"><img data-img-src="assets/images/other_images/transp-image5b.png" class="lazy pull-right" alt="Lorem Ipsum">We are a small farm in Southwest Missouri just north of the Joplin/Carthage area dedicated to raising all natural <a href="#carousel">grassfed beef and grassfed lamb</a>. By all natural, we mean that our animals are not given steroids, hormones, or antibiotics. We strive to give them a fresh, healthy, stress-free environment. We do our best to care for our land and raise all of our livestock organically. </p>
+                <p class="feature-paragraph"><img data-img-src="assets/images/river_sheep.jpg" class="lazy pull-right" alt="Lorem Ipsum">We are a small farm in Southwest Missouri just north of the Joplin/Carthage area dedicated to raising all natural <a href="#carousel">grassfed beef and grassfed lamb</a>. By all natural, we mean that our animals are not given steroids, hormones, or antibiotics. We strive to give them a fresh, healthy, stress-free environment. We do our best to care for our land and raise all of our livestock organically. </p>
                 <h4>All Natural, Grassfed</h4>
                 <p>We believe that the most nutritious and healtful foods are those that are produced without chemicals or pesticides. For cattle and sheep, we believe that entails spending their lives grazing pastures free from commerical fertilizers, herbicides, pesticides, etc.  For more information about the benefits of eating all natural grassfed products, please visit <a href="http://www.eatwild.com" target="_blank">Eatwild.com</a>.</p>
                 <p><a href="" onclick="populate_and_open_modal(event, 'modal-content-1');" class="btn btn-outline-inverse btn-sm">read more</a></p>
@@ -115,7 +115,7 @@
           </div><!-- .content-wrapper -->
         </article><!-- .section-wrapper -->
 
-        <article id="carousel" class="section-wrapper clearfix" data-custom-background-img="assets/images/other_images/bg6.jpg">
+        <article id="carousel" class="section-wrapper clearfix" data-custom-background-img="assets/images/pasture_chicken.jpg">
           <div class="content-wrapper clearfix">
 
               <div id="features-carousel" class="carousel slide with-title-indicators max-height" data-height-percent="70" data-ride="carousel">
