--- a/1.html
+++ b/1.html
@@ -93,7 +93,7 @@
 
                 <h1 class="section-title">About Us</h1>
 
-                <p class="feature-paragraph"><img data-img-src="assets/images/river_sheep.jpg" class="lazy pull-right" alt="Lorem Ipsum">We are a small farm in Southwest Missouri just north of the Joplin/Carthage area dedicated to raising all natural <a href="#carousel">grassfed beef and grassfed lamb</a>. By all natural, we mean that our animals are not given steroids, hormones, or antibiotics. We strive to give them a fresh, healthy, stress-free environment. We do our best to care for our land and raise all of our livestock organically. </p>
+                <p class="feature-paragraph"><img data-img-src="assets/images/river_sheep.jpg" class="lazy pull-right squared_border" alt="Lorem Ipsum">We are a small farm in Southwest Missouri just north of the Joplin/Carthage area dedicated to raising all natural <a href="#carousel">grassfed beef and grassfed lamb</a>. By all natural, we mean that our animals are not given steroids, hormones, or antibiotics. We strive to give them a fresh, healthy, stress-free environment. We do our best to care for our land and raise all of our livestock organically. </p>
                 <h4>All Natural, Grassfed</h4>
                 <p>We believe that the most nutritious and healtful foods are those that are produced without chemicals or pesticides. For cattle and sheep, we believe that entails spending their lives grazing pastures free from commerical fertilizers, herbicides, pesticides, etc.  For more information about the benefits of eating all natural grassfed products, please visit <a href="http://www.eatwild.com" target="_blank">Eatwild.com</a>.</p>
                 <p><a href="" onclick="populate_and_open_modal(event, 'modal-content-1');" class="btn btn-outline-inverse btn-sm">read more</a></p>
@@ -132,66 +132,52 @@
                 <div class="carousel-inner">
 
                   <div class="item active">
-                    <div class="carousel-text-content">
-                      <img src="assets/images/other_images/transp-image1.png" class="icon" alt="Lorem Ipsum">
-                      <h2 class="title">Lorem Ipsum</h2>
-                      <p>Suspendisse molestie lorem odio, sit amet. Duis dictum lorem metus, vitae dapibus risus imperdiet nec. Suspendisse molestie lorem odio.</p>
+                    <div class="carousel-text-content darken box">
+                      <h2 class="title">Beef</h2>
+                      <p>Our cattle all 100% grass fed and finshed. By that we mean that they are raised on their mother's milk and on what forage they can get from the pastures as well as supplemental hay as necessary during the winter. They also receive an all natural mineral supplement and loose rock salt.</p>
+                      <p> They are raised naturally, which means that we do not use any hormones, steroids, performance enhancers, etc. Whatever they get, they get what God provides from the ground. We also do not use any chemical pesticides on our pastures but rely on rotational grazing and occasional mowing to keep the weeds at bay. We strive for an organic environment.</p>
                       <p><a href="" onclick="populate_and_open_modal(event, 'modal-content-2');" class="btn btn-outline-inverse btn-sm">read more</a></p>
 
                       <div class="content-to-populate-in-modal" id="modal-content-2">
-                        <h1>Lorem Ipsum</h1>
-                        <p><img data-img-src="assets/images/other_images/transp-image1.png" class="lazy rounded_border hover_effect pull-left" alt="Lorem Ipsum">Etiam at ligula sit amet arcu laoreet consequat. Duis dictum lorem metus, vitae dapibus risus imperdiet nec. <a href="#">Suspendisse molestie lorem odio</a>, sit amet. </p>
-                        <p>Laoreet consequat. Duis dictum lorem metus, vitae dapibus risus imperdiet nec. Suspendisse molestie lorem odio, sit amet.</p>
-                        <p>Suspendisse molestie lorem odio, sit amet. Duis dictum lorem metus, vitae dapibus risus imperdiet nec. Suspendisse molestie lorem odio test.</p>
+                        <h1>Beef Cattle</h1>
+                        <p><img data-img-src="assets/images/bull_square.jpg" class="lazy rounded_border hover_effect pull-left" alt="Lorem Ipsum">We have several breeds of cows. We try to choose those breeds that are best suited for good grass fed beef. Most of our cows are smaller, English type breeds which tends to make them more efficient at converting grass to meat. These include Scottish Highlands,, Shorthorn, Angus, Murray Grey and British White. Our goal is not to produce the biggest cows, but produce the best meat for your table.</p>
+                        <p>We use Murray Grey bulls on our cows which produces excellent grass fed beef with more marbling from only pasture. Murray Grey cattle were developed in Australia during the last century, and were first imported to the United States in 1970. Murray Greys combine the best traits of their parent breeds into a very unique, all beef breed. Murray Grey cattle have the excellent temperament, thriftiness and meat tenderness of the Shorthorns and the marbling traits of the original Scotch Aberdeen Angus. They produce an excellent grass finished beef.</p>
+                        <p>For more information about the benefits of eating grassfed products, please visit <a href="http://www.eatwild.com">Eatwild.com</a>.</p>
                       </div><!-- #modal-content-2 -->
                     </div>
                   </div><!-- .item -->
 
                   <div class="item">
-                    <div class="carousel-text-content">
-                      <img src="assets/images/other_images/transp-image6.png" class="icon" alt="Lorem Ipsum">
-                      <h2 class="title">Suspendisse molestie</h2>
-                      <p>Etiam at ligula sit amet arcu laoreet consequat. Duis dictum lorem metus, vitae dapibus risus imperdiet nec. Duis dictum lorem metus.</p>
+                    <div class="carousel-text-content darken box">
+                      <h2 class="title">Hair Sheep</h2>
+                      <p>We weren't sure about lamb. We'd heard many say that they didn't like the flavor, but those people had bought their lamb at the store or had it in a restaurant.</p>
+                      <p>Since we don't use herbicides, we had originally acquired our sheep as a means to help keep the weeds down in the pastures. We hoped that we would like the meat. What we found was that the meat from our grass fed lambs is great! It's very similar to beef, but does have it's own flavor and tends to be a little milder.</p>
+                      <p>It is excellent grilled, in stews, or ground. If you haven't had the chance to try lamb, we encourage you to try some chops on the grill or ground lamb as burgers, or for a really special treat, try some lamb breakfast sausage!</p>
                       <p><a href="" onclick="populate_and_open_modal(event, 'modal-content-3');" class="btn btn-outline-inverse btn-sm">read more</a></p>
 
                       <div class="content-to-populate-in-modal" id="modal-content-3">
-                        <h1>Suspendisse molestie</h1>
-                        <p><img data-img-src="assets/images/other_images/transp-image6.png" class="lazy rounded_border hover_effect pull-left" alt="Lorem Ipsum">Etiam at ligula sit amet arcu laoreet consequat. Duis dictum lorem metus, vitae dapibus risus imperdiet nec. <a href="#">Suspendisse molestie lorem odio</a>, sit amet. </p>
-                        <p>Laoreet consequat. Duis dictum lorem metus, vitae dapibus risus imperdiet nec. Suspendisse molestie lorem odio, sit amet.</p>
-                        <p>Suspendisse molestie lorem odio, sit amet. Duis dictum lorem metus, vitae dapibus risus imperdiet nec. Suspendisse molestie lorem odio test.</p>
+                        <h1>Hair Sheep</h1>
+                        <p><img data-img-src="assets/images/sheep_square.jpg" class="lazy rounded_border hover_effect pull-left" alt="Lorem Ipsum">As with our other animals, our sheep and lambs spend their life on pasture freely grazing fresh forage. In the winter we supplement with hay as necessary. They also have access to the same all natural mineral supplements that our cows get. Like our beef, these are raised all naturally without any drugs or chemicals, not even wormers.</p>
+                        <p>We chose Khatadin sheep for our base as they are a "hair" sheep (don't require shearing), and they are known to have a higher resistance to parasites than some other breeds. We also have some Dorpers in the mix which gives the cross a little more meat.  We run the sheep with the cows in the same paddocks at the same time. The cows help clean up after the sheep, and the sheep help clean up after the cows. They are very complimentary animals.</p>
+                        <p>We'll have a limited supply of lambs available this year. Please give us a call at (417)621-5476 or email us at <a href="mailto:gilesranch@gmail.com">gilesranch@gmail.com</a> to reserve yours.</p>
                       </div><!-- #modal-content-3 -->
                     </div>
                   </div><!-- .item -->
 
                   <div class="item">
-                    <div class="carousel-text-content">
-                      <img src="assets/images/other_images/transp-image7.png" class="icon" alt="Lorem Ipsum">
-                      <h2 class="title">Maecenas id dolor</h2>
-                      <p>Fusce erat augue, fermentum sit amet congue a, ullamcorper ac enim. Maecenas id dolor imperdiet, mollis felis ut, pellentesque ante. Sed id congue arcu. Nulla eget commodo sem. Suspendisse suscipit, sem ac.</p>
+                    <div class="carousel-text-content darken box">
+                      <h2 class="title">Fertrell Products</h2>
+                      <p>We have all natural and organic livestock mineral supplements as well as organic lawn, garden and pasture fertilizers available. There was not a local supplier for some of the supplements that we use, so we decided to carry the products so that we and other local farmers and homeowners would have a more convenient, local source.</p>
+                      <p>Our beef and dairy cows receive <a href="http://www.fertrell.com/redmondtracemineralsalt.htm">Redmond Trace Mineral Salt</a>, <a href="http://www.fertrell.com/grazierchoice.htm">Fertrell Grazier's Choice</a>, and <a href="http://www.fertrell.com/northalantickelpmeal.htm">Fertrell North Atlantic Kelp Meal</a> for supplemental vitamins and minerals.  Our poultry receive <a href="http://www.fertrell.com/poutrynurtibalancer.htm">Fertrell Organic Nutribalancer</a> in their feed ration.  These are all natural products that have been very beneficial for our animals.</p>
                       <p><a href="" onclick="populate_and_open_modal(event, 'modal-content-4');" class="btn btn-outline-inverse btn-sm">read more</a></p>
 
                       <div class="content-to-populate-in-modal" id="modal-content-4">
-                        <h1>Maecenas id dolor</h1>
-                        <p><img data-img-src="assets/images/other_images/transp-image7.png" class="lazy rounded_border hover_effect pull-left" alt="Lorem Ipsum">Etiam at ligula sit amet arcu laoreet consequat. Duis dictum lorem metus, vitae dapibus risus imperdiet nec. <a href="#">Suspendisse molestie lorem odio</a>, sit amet. </p>
-                        <p>Laoreet consequat. Duis dictum lorem metus, vitae dapibus risus imperdiet nec. Suspendisse molestie lorem odio, sit amet.</p>
-                        <p>Suspendisse molestie lorem odio, sit amet. Duis dictum lorem metus, vitae dapibus risus imperdiet nec. Suspendisse molestie lorem odio test.</p>
+                        <h1>Fertrell Products</h1>
+                        <p><img data-img-src="assets/images/fertrell_logo.jpg" class="lazy rounded_border hover_effect pull-left" alt="Lorem Ipsum"><p>Our beef and dairy cows receive <a href="http://www.fertrell.com/redmondtracemineralsalt.htm">Redmond Trace Mineral Salt</a>, <a href="http://www.fertrell.com/grazierchoice.htm">Fertrell Grazier's Choice</a>, and <a href="http://www.fertrell.com/northalantickelpmeal.htm">Fertrell North Atlantic Kelp Meal</a> for supplemental vitamins and minerals.  Our poultry receive <a href="http://www.fertrell.com/poutrynurtibalancer.htm">Fertrell Organic Nutribalancer</a> in their feed ration.  These are all natural products that have been very beneficial for our animals.</p>
+                        <p>While our main focus remains producing all natural, healthy livestock for local consumers, we felt that having a local source of these supplements would be beneficial.</p>
+                        <p>In addition to these supplements, we are able to supply other items from the <a href="http://www.fertrell.com/">Fertrell</a> company for both farmers and home owners.  In addition to all natural and organic supplements, the <a href="http://www.fertrell.com/">Fertrell</a> company also carries a variety of organic <a href="http://www.fertrell.com/soilcareproducts.htm">soil care products</a> for lawns, gardens, and pastures.  You can learn more about the full line of product offerings at Fetrell's website, <a href="http://www.fertrell.com/">http://www.fertrell.com</a>.</p>
+                        <p>For pricing and availability, please email us at <a href="mailto:gilesranch@gmail.com">gilesranch@gmail.com</a>, or give us a call at (417)621-5476.</p>
                       </div><!-- #modal-content-4 -->
-                    </div>
-                  </div><!-- .item -->
-
-                  <div class="item">
-                    <div class="carousel-text-content">
-                      <img src="assets/images/other_images/transp-image4.png" class="icon" alt="Lorem Ipsum">
-                      <h2 class="title">Sed scelerisque</h2>
-                      <p>Aenean a est fringilla, malesuada eros vel, condimentum augue. Sed lorem sapien, vestibulum quis nisl volutpat, fermentum adipiscing massa. Cras ac faucibus nisl. Proin ac convallis sapien. </p>
-                      <p><a href="" onclick="populate_and_open_modal(event, 'modal-content-5');" class="btn btn-outline-inverse btn-sm">read more</a></p>
-
-                      <div class="content-to-populate-in-modal" id="modal-content-5">
-                        <h1>Sed scelerisque</h1>
-                        <p><img data-img-src="assets/images/other_images/transp-image4.png" class="lazy rounded_border hover_effect pull-left" alt="Lorem Ipsum">Etiam at ligula sit amet arcu laoreet consequat. Duis dictum lorem metus, vitae dapibus risus imperdiet nec. <a href="#">Suspendisse molestie lorem odio</a>, sit amet. </p>
-                        <p>Laoreet consequat. Duis dictum lorem metus, vitae dapibus risus imperdiet nec. Suspendisse molestie lorem odio, sit amet.</p>
-                        <p>Suspendisse molestie lorem odio, sit amet. Duis dictum lorem metus, vitae dapibus risus imperdiet nec. Suspendisse molestie lorem odio test.</p>
-                      </div><!-- #modal-content-5 -->
                     </div>
                   </div><!-- .item -->
 
