update contact info - right justify

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
               <h1 class="section-title">Contact</h1>
               
                 <!-- CONTACT DETAILS -->
-                <div class="contact-details col-sm-5 col-md-3 float-right">
+                <div class="contact-details">
                   <p>17534 Base Line Blvd<br/>Jasper, MO<br/>64755</p>
                   <p>Tel: (417) 621=5476</p>
                   <p><a href="mailto:gilesranch@gmail.com">gilesranch@gmail.com</a></p>
