fix phone number

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                 <!-- CONTACT DETAILS -->
                 <div class="contact-details">
                   <p>17534 Base Line Blvd<br/>Jasper, MO<br/>64755</p>
-                  <p>Tel: (417) 621=5476</p>
+                  <p>Tel: (417) 621-5476</p>
                   <p><a href="mailto:gilesranch@gmail.com">gilesranch@gmail.com</a></p>
                 </div>
                 <!-- END: CONTACT DETAILS -->
