--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
                 <h1 class="section-title">About Us</h1>
 
-                <p class="feature-paragraph"><img data-img-src="assets/images/river_sheep.jpg" class="lazy pull-right squared_border" alt="Lorem Ipsum">We are a small farm in Southwest Missouri just north of the Joplin/Carthage area dedicated to raising all natural <a href="#carousel">grassfed beef and grassfed lamb</a>. By all natural, we mean that our animals are not given steroids, hormones, or antibiotics. We strive to give them a fresh, healthy, stress-free environment. We do our best to care for our land and raise all of our livestock organically. </p>
+                <p class="feature-paragraph"><img data-img-src="assets/images/river_sheep.jpg" class="lazy pull-right squared_border" alt="">We are a small farm in Southwest Missouri just north of the Joplin/Carthage area dedicated to raising all natural <a href="#carousel">grassfed beef and grassfed lamb</a>. By all natural, we mean that our animals are not given steroids, hormones, or antibiotics. We strive to give them a fresh, healthy, stress-free environment. We do our best to care for our land and raise all of our livestock organically. </p>
                 <h4>All Natural, Grassfed</h4>
                 <p>We believe that the most nutritious and healtful foods are those that are produced without chemicals or pesticides. For cattle and sheep, we believe that entails spending their lives grazing pastures free from commerical fertilizers, herbicides, pesticides, etc.  For more information about the benefits of eating all natural grassfed products, please visit <a href="http://www.eatwild.com" target="_blank">Eatwild.com</a>.</p>
                 <p><a href="" onclick="populate_and_open_modal(event, 'modal-content-1');" class="btn btn-outline-inverse btn-sm">read more</a></p>
@@ -103,10 +103,10 @@
                   <p>Our goal with all of our livestock is to provide all natural, healthy, chemical free, grassfed products. We want to be good stewards of the land that God has so graciously provided us, and also care well for the animals with which we've been blessed to be stewards. </p>
                   <p>We truly believe that by producing all natural grassfed products, we can help improve peoples health and lives by providing them with a healthy alternative to many of the products found at most grocery stores. For more information about the benefits of eating grassfed products, please visit <a href="http://www.eatwild.com" target="_blank">Eatwild.com</a>.</p>
                   <h3>Beef Cattle</h3>
-                  <p><img data-img-src="assets/images/brown_calf_cropped.jpg" class="lazy rounded_border hover_effect pull-right" alt="Lorem Ipsum">Our beef cattle are fed fresh pasture or hay. The only supplements they receive in addition to their daily pasture and/or hay are natural minerals including kelp meal, loose trace mineral rock salt, and organic mineral supplements. </p>
+                  <p><img data-img-src="assets/images/brown_calf_cropped.jpg" class="lazy rounded_border hover_effect pull-right" alt="">Our beef cattle are fed fresh pasture or hay. The only supplements they receive in addition to their daily pasture and/or hay are natural minerals including kelp meal, loose trace mineral rock salt, and organic mineral supplements. </p>
                   <p>We do not use any artificial enhancers such as hormones, steroids, medicated feed, etc. We also do not use any chemical pesticides on our pastures, but rely on our rotational grazing practices and occasional mowing to keep the weeds at bay.</p>
                   <h3>Hair Sheep</h3>
-                  <p><img data-img-src="assets/images/other_images/transp-image3.png" class="lazy rounded_border hover_effect pull-left" alt="Lorem Ipsum">Sheep have been a wonderful addition to our ranch. The sheep graze together with the cows and mix in very well. As with our beef, our sheep and lambs do not receive anything other than pasture, hay and all natural minerals. No chemicals, no drugs, not even wormers. We're excited to be able to offer organically raised grass fed lamb.</p>
+                  <p><img data-img-src="assets/images/other_images/transp-image3.png" class="lazy rounded_border hover_effect pull-left" alt="">Sheep have been a wonderful addition to our ranch. The sheep graze together with the cows and mix in very well. As with our beef, our sheep and lambs do not receive anything other than pasture, hay and all natural minerals. No chemicals, no drugs, not even wormers. We're excited to be able to offer organically raised grass fed lamb.</p>
                   <p>&nbsp;</p>
                   <p>If you would like more information, please email us at <a href="mailto:gilesranch@gmail.com">gilesranch@gmail.com</a>, or phone at (417) 621-5476.</p>
                 </div><!-- #modal-content-1 -->
@@ -125,7 +125,7 @@
                   <li data-target="#features-carousel" data-slide-to="0" class="active">Beef</li>
                   <li data-target="#features-carousel" data-slide-to="1">Lamb</li>
                   <li data-target="#features-carousel" data-slide-to="2">Fetrell</li>
-                  <!-- <li data-target="#features-carousel" data-slide-to="3">Scelerisque</li> -->
+                  <li data-target="#features-carousel" data-slide-to="3">Nixall</li>
                 </ol>
 
                 <!-- Wrapper for slides -->
@@ -140,7 +140,7 @@
 
                       <div class="content-to-populate-in-modal" id="modal-content-2">
                         <h1>Beef Cattle</h1>
-                        <p><img data-img-src="assets/images/bull_square.jpg" class="lazy rounded_border hover_effect pull-left" alt="Lorem Ipsum">We have several breeds of cows. We try to choose those breeds that are best suited for good grass fed beef. Most of our cows are smaller, English type breeds which tends to make them more efficient at converting grass to meat. These include Scottish Highlands,, Shorthorn, Angus, Murray Grey and British White. Our goal is not to produce the biggest cows, but produce the best meat for your table.</p>
+                        <p><img data-img-src="assets/images/bull_square.jpg" class="lazy rounded_border hover_effect pull-left" alt="Beef">We have several breeds of cows. We try to choose those breeds that are best suited for good grass fed beef. Most of our cows are smaller, English type breeds which tends to make them more efficient at converting grass to meat. These include Scottish Highlands,, Shorthorn, Angus, Murray Grey and British White. Our goal is not to produce the biggest cows, but produce the best meat for your table.</p>
                         <p>We use Murray Grey bulls on our cows which produces excellent grass fed beef with more marbling from only pasture. Murray Grey cattle were developed in Australia during the last century, and were first imported to the United States in 1970. Murray Greys combine the best traits of their parent breeds into a very unique, all beef breed. Murray Grey cattle have the excellent temperament, thriftiness and meat tenderness of the Shorthorns and the marbling traits of the original Scotch Aberdeen Angus. They produce an excellent grass finished beef.</p>
                         <p>For more information about the benefits of eating grassfed products, please visit <a href="http://www.eatwild.com">Eatwild.com</a>.</p>
                       </div><!-- #modal-content-2 -->
@@ -157,7 +157,7 @@
 
                       <div class="content-to-populate-in-modal" id="modal-content-3">
                         <h1>Hair Sheep</h1>
-                        <p><img data-img-src="assets/images/sheep_square.jpg" class="lazy rounded_border hover_effect pull-left" alt="Lorem Ipsum">As with our other animals, our sheep and lambs spend their life on pasture freely grazing fresh forage. In the winter we supplement with hay as necessary. They also have access to the same all natural mineral supplements that our cows get. Like our beef, these are raised all naturally without any drugs or chemicals, not even wormers.</p>
+                        <p><img data-img-src="assets/images/sheep_square.jpg" class="lazy rounded_border hover_effect pull-left" alt="Lamb">As with our other animals, our sheep and lambs spend their life on pasture freely grazing fresh forage. In the winter we supplement with hay as necessary. They also have access to the same all natural mineral supplements that our cows get. Like our beef, these are raised all naturally without any drugs or chemicals, not even wormers.</p>
                         <p>We chose Khatadin sheep for our base as they are a "hair" sheep (don't require shearing), and they are known to have a higher resistance to parasites than some other breeds. We also have some Dorpers in the mix which gives the cross a little more meat.  We run the sheep with the cows in the same paddocks at the same time. The cows help clean up after the sheep, and the sheep help clean up after the cows. They are very complimentary animals.</p>
                         <p>We'll have a limited supply of lambs available this year. Please give us a call at (417)621-5476 or email us at <a href="mailto:gilesranch@gmail.com">gilesranch@gmail.com</a> to reserve yours.</p>
                       </div><!-- #modal-content-3 -->
@@ -168,15 +168,46 @@
                     <div class="carousel-text-content darken box">
                       <h2 class="title">Fertrell Products</h2>
                       <p>We have all natural and organic livestock mineral supplements as well as organic lawn, garden and pasture fertilizers available. There was not a local supplier for some of the supplements that we use, so we decided to carry the products so that we and other local farmers and homeowners would have a more convenient, local source.</p>
-                      <p>Our beef and dairy cows receive <a href="http://www.fertrell.com/redmondtracemineralsalt.htm">Redmond Trace Mineral Salt</a>, <a href="http://www.fertrell.com/grazierchoice.htm">Fertrell Grazier's Choice</a>, and <a href="http://www.fertrell.com/northalantickelpmeal.htm">Fertrell North Atlantic Kelp Meal</a> for supplemental vitamins and minerals.  Our poultry receive <a href="http://www.fertrell.com/poutrynurtibalancer.htm">Fertrell Organic Nutribalancer</a> in their feed ration.  These are all natural products that have been very beneficial for our animals.</p>
+                      <p>Our cows and sheep receive <a href="http://www.fertrell.com/redmondtracemineralsalt.htm">Redmond Trace Mineral Salt</a>, <a href="http://www.fertrell.com/grazierchoice.htm">Fertrell Grazier's Choice</a>, and <a href="http://www.fertrell.com/northalantickelpmeal.htm">Fertrell North Atlantic Kelp Meal</a> for supplemental vitamins and minerals.  Our poultry receive <a href="http://www.fertrell.com/poutrynurtibalancer.htm">Fertrell Organic Nutribalancer</a> in their feed ration.  These are all natural products that have been very beneficial for our animals.</p>
                       <p><a href="" onclick="populate_and_open_modal(event, 'modal-content-4');" class="btn btn-outline-inverse btn-sm">read more</a></p>
 
                       <div class="content-to-populate-in-modal" id="modal-content-4">
                         <h1>Fertrell Products</h1>
-                        <p><img data-img-src="assets/images/fertrell_logo.png" class="lazy rounded_border hover_effect pull-left" alt="Lorem Ipsum"><p>Our beef and dairy cows receive <a href="http://www.fertrell.com/redmondtracemineralsalt.htm">Redmond Trace Mineral Salt</a>, <a href="http://www.fertrell.com/grazierchoice.htm">Fertrell Grazier's Choice</a>, and <a href="http://www.fertrell.com/northalantickelpmeal.htm">Fertrell North Atlantic Kelp Meal</a> for supplemental vitamins and minerals.  Our poultry receive <a href="http://www.fertrell.com/poutrynurtibalancer.htm">Fertrell Organic Nutribalancer</a> in their feed ration.  These are all natural products that have been very beneficial for our animals.</p>
+                        <p><img data-img-src="assets/images/fertrell_logo.png" class="lazy rounded_border hover_effect pull-left" alt="Fertrell"><p>Our beef and dairy cows receive <a href="http://www.fertrell.com/redmondtracemineralsalt.htm">Redmond Trace Mineral Salt</a>, <a href="http://www.fertrell.com/grazierchoice.htm">Fertrell Grazier's Choice</a>, and <a href="http://www.fertrell.com/northalantickelpmeal.htm">Fertrell North Atlantic Kelp Meal</a> for supplemental vitamins and minerals.  Our poultry receive <a href="http://www.fertrell.com/poutrynurtibalancer.htm">Fertrell Organic Nutribalancer</a> in their feed ration.  These are all natural products that have been very beneficial for our animals.</p>
                         <p>While our main focus remains producing all natural, healthy livestock for local consumers, we felt that having a local source of these supplements would be beneficial.</p>
                         <p>In addition to these supplements, we are able to supply other items from the <a href="http://www.fertrell.com/">Fertrell</a> company for both farmers and home owners.  In addition to all natural and organic supplements, the <a href="http://www.fertrell.com/">Fertrell</a> company also carries a variety of organic <a href="http://www.fertrell.com/soilcareproducts.htm">soil care products</a> for lawns, gardens, and pastures.  You can learn more about the full line of product offerings at Fetrell's website, <a href="http://www.fertrell.com/">http://www.fertrell.com</a>.</p>
                         <p>For pricing and availability, please email us at <a href="mailto:gilesranch@gmail.com">gilesranch@gmail.com</a>, or give us a call at (417)621-5476.</p>
+                      </div><!-- #modal-content-4 -->
+                    </div>
+                  </div><!-- .item -->
+
+                  <div class="item">
+                    <div class="carousel-text-content darken box">
+                      <h2 class="title">Nixall</h2>
+                      <p>This is a great product for disinfecting and sanitizing.  We use it in the home, on the animals, and on ourselves.  If you haven't yet heard of this product, please check it out here: <a href="http://www.nixall.com">www.nixall.com</a></p>
+                      <p><a href="" onclick="populate_and_open_modal(event, 'modal-content-nixall');" class="btn btn-outline-inverse btn-sm">read more</a></p>
+
+                      <div class="content-to-populate-in-modal" id="modal-content-nixall">
+                        <h1>Nixall</h1>
+                        <p><img data-img-src="assets/images/nixal_logo.jpg" class="lazy rounded_border hover_effect pull-left" alt="Nixall"><p>From the Nixall website:</p>
+                        <p>Nixall® Disinfectant/Sanitizer is the only disinfectant with a hypochlorous acid active ingredient that kills multiple drug resistant bacterium.</p>
+                        <p>This product rapidly breaks down entirely to salt water.</p>
+                        <p>Not harmful to septic and waste water treatment systems.</p>
+                       <p>Its clean smell and powerful disinfectant abilities can be used in institutional facilities as well as your home.</p>
+                       <ul>
+                          <li>Kills a wide range of bacteria including Staphylococcus aureus MRSA, Salmonella enterica, Pseudomonas aeruginosa.  Kills multiple drug resistant bacterium</li>
+                          <li>Virucide, tuberculocide, Bactericide, Germicide</li>
+                          <li>Kills Pandemic 2009 H1N1 influenza A virus (formerly called Swine Flu)</li>
+                          <li>Kills  Clostridium difficile (C. diff) spores</li>
+                          <li>Kills HIV (Aids virus)</li>
+                          <li>Deodorizes by killing the bacteria that causes odors</li>
+                          <li>Active ingredient hypochlorous acid [(HOCI)] derived from naturally occurring salt minerals and water</li>
+                          <li>Aids in the reduction of cross-contamination between treated surfaces</li>
+                          <li>Designed to save you time</li>
+                          <li>Easy one-step cleaning and disinfecting</li>
+                          <li>Effective in Clean-in-place sanitizing</li>
+                        </ul>
+                        <p>Note: Nixall® Disinfectant/Sanitizer has a 30 day shelf life. </p>
                       </div><!-- #modal-content-4 -->
                     </div>
                   </div><!-- .item -->
