update background image

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <div class="background-image-overlay"></div>
 
-    <div id="outer-background-container" data-default-background-img="assets/images/home.jpg" style="background-image:url(assets/images/other_images/bg5.jpg);"></div>
+    <div id="outer-background-container" data-default-background-img="assets/images/home.jpg" style="background-image:url(assets/images/home.jpg);"></div>
     <!-- end: #outer-background-container -->    
 
     <!-- Outer Container -->
